added routing to react

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "es6",
+    "module": "esnext",
     "target": "es5",
     "jsx": "react",
-    "allowJs": false
+    "allowJs": false,
+    "moduleResolution": "Node",
+    "paths": {
+      "_components/*": ["components/*"],
+    }
   }
 }
